Proyecto2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> LLAA EXCLAMACION GUION GUION RCONTROLES controles RCONTROLES GUION GUION LLAC
Rule 5     instruccion -> LLAA EXCLAMACION GUION GUION RPROPIEDADES propiedades RPROPIEDADES GUION GUION LLAC
Rule 6     controles -> controles control
Rule 7     controles -> control
Rule 8     control -> RETIQUETA ID PTCOMA
Rule 9     control -> RBOTON ID PTCOMA
Rule 10    control -> RCHECK ID PTCOMA
Rule 11    control -> RRADIOBUTTON ID PTCOMA
Rule 12    control -> RTEXTO ID PTCOMA
Rule 13    control -> RAREATEXTO ID PTCOMA
Rule 14    control -> RCLAVE ID PTCOMA
Rule 15    control -> RCONTENEDOR ID PTCOMA
Rule 16    propiedades -> propiedades propiedad
Rule 17    propiedades -> propiedad
Rule 18    propiedad -> ID PUNTO ID PARA parametros PARC PTCOMA
Rule 19    parametros -> parametros COMA parametro
Rule 20    parametros -> parametro
Rule 21    parametro -> expresion
Rule 22    expresion -> ENTERO
Rule 23    expresion -> DECIMAL
Rule 24    expresion -> CADENA
Rule 25    expresion -> ID

Terminals, with rules where they appear

CADENA               : 24
COMA                 : 19
DECIMAL              : 23
ENTERO               : 22
EXCLAMACION          : 4 5
GUION                : 4 4 4 4 5 5 5 5
ID                   : 8 9 10 11 12 13 14 15 18 18 25
LLAA                 : 4 5
LLAC                 : 4 5
PARA                 : 18
PARC                 : 18
PTCOMA               : 8 9 10 11 12 13 14 15 18
PUNTO                : 18
RAREATEXTO           : 13
RBOTON               : 9
RCHECK               : 10
RCLAVE               : 14
RCONTENEDOR          : 15
RCONTROLES           : 4 4
RETIQUETA            : 8
RPROPIEDADES         : 5 5
RRADIOBUTTON         : 11
RTEXTO               : 12
error                : 

Nonterminals, with rules where they appear

control              : 6 7
controles            : 4 6
expresion            : 21
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2
parametro            : 19 20
parametros           : 18 19
propiedad            : 16 17
propiedades          : 5 16

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . LLAA EXCLAMACION GUION GUION RCONTROLES controles RCONTROLES GUION GUION LLAC
    (5) instruccion -> . LLAA EXCLAMACION GUION GUION RPROPIEDADES propiedades RPROPIEDADES GUION GUION LLAC

    LLAA            shift and go to state 4

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . LLAA EXCLAMACION GUION GUION RCONTROLES controles RCONTROLES GUION GUION LLAC
    (5) instruccion -> . LLAA EXCLAMACION GUION GUION RPROPIEDADES propiedades RPROPIEDADES GUION GUION LLAC

    $end            reduce using rule 1 (init -> instrucciones .)
    LLAA            shift and go to state 4

    instruccion                    shift and go to state 5

state 3

    (3) instrucciones -> instruccion .

    LLAA            reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> LLAA . EXCLAMACION GUION GUION RCONTROLES controles RCONTROLES GUION GUION LLAC
    (5) instruccion -> LLAA . EXCLAMACION GUION GUION RPROPIEDADES propiedades RPROPIEDADES GUION GUION LLAC

    EXCLAMACION     shift and go to state 6


state 5

    (2) instrucciones -> instrucciones instruccion .

    LLAA            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 6

    (4) instruccion -> LLAA EXCLAMACION . GUION GUION RCONTROLES controles RCONTROLES GUION GUION LLAC
    (5) instruccion -> LLAA EXCLAMACION . GUION GUION RPROPIEDADES propiedades RPROPIEDADES GUION GUION LLAC

    GUION           shift and go to state 7


state 7

    (4) instruccion -> LLAA EXCLAMACION GUION . GUION RCONTROLES controles RCONTROLES GUION GUION LLAC
    (5) instruccion -> LLAA EXCLAMACION GUION . GUION RPROPIEDADES propiedades RPROPIEDADES GUION GUION LLAC

    GUION           shift and go to state 8


state 8

    (4) instruccion -> LLAA EXCLAMACION GUION GUION . RCONTROLES controles RCONTROLES GUION GUION LLAC
    (5) instruccion -> LLAA EXCLAMACION GUION GUION . RPROPIEDADES propiedades RPROPIEDADES GUION GUION LLAC

    RCONTROLES      shift and go to state 9
    RPROPIEDADES    shift and go to state 10


state 9

    (4) instruccion -> LLAA EXCLAMACION GUION GUION RCONTROLES . controles RCONTROLES GUION GUION LLAC
    (6) controles -> . controles control
    (7) controles -> . control
    (8) control -> . RETIQUETA ID PTCOMA
    (9) control -> . RBOTON ID PTCOMA
    (10) control -> . RCHECK ID PTCOMA
    (11) control -> . RRADIOBUTTON ID PTCOMA
    (12) control -> . RTEXTO ID PTCOMA
    (13) control -> . RAREATEXTO ID PTCOMA
    (14) control -> . RCLAVE ID PTCOMA
    (15) control -> . RCONTENEDOR ID PTCOMA

    RETIQUETA       shift and go to state 13
    RBOTON          shift and go to state 14
    RCHECK          shift and go to state 15
    RRADIOBUTTON    shift and go to state 16
    RTEXTO          shift and go to state 17
    RAREATEXTO      shift and go to state 18
    RCLAVE          shift and go to state 19
    RCONTENEDOR     shift and go to state 20

    controles                      shift and go to state 11
    control                        shift and go to state 12

state 10

    (5) instruccion -> LLAA EXCLAMACION GUION GUION RPROPIEDADES . propiedades RPROPIEDADES GUION GUION LLAC
    (16) propiedades -> . propiedades propiedad
    (17) propiedades -> . propiedad
    (18) propiedad -> . ID PUNTO ID PARA parametros PARC PTCOMA

    ID              shift and go to state 23

    propiedades                    shift and go to state 21
    propiedad                      shift and go to state 22

state 11

    (4) instruccion -> LLAA EXCLAMACION GUION GUION RCONTROLES controles . RCONTROLES GUION GUION LLAC
    (6) controles -> controles . control
    (8) control -> . RETIQUETA ID PTCOMA
    (9) control -> . RBOTON ID PTCOMA
    (10) control -> . RCHECK ID PTCOMA
    (11) control -> . RRADIOBUTTON ID PTCOMA
    (12) control -> . RTEXTO ID PTCOMA
    (13) control -> . RAREATEXTO ID PTCOMA
    (14) control -> . RCLAVE ID PTCOMA
    (15) control -> . RCONTENEDOR ID PTCOMA

    RCONTROLES      shift and go to state 24
    RETIQUETA       shift and go to state 13
    RBOTON          shift and go to state 14
    RCHECK          shift and go to state 15
    RRADIOBUTTON    shift and go to state 16
    RTEXTO          shift and go to state 17
    RAREATEXTO      shift and go to state 18
    RCLAVE          shift and go to state 19
    RCONTENEDOR     shift and go to state 20

    control                        shift and go to state 25

state 12

    (7) controles -> control .

    RCONTROLES      reduce using rule 7 (controles -> control .)
    RETIQUETA       reduce using rule 7 (controles -> control .)
    RBOTON          reduce using rule 7 (controles -> control .)
    RCHECK          reduce using rule 7 (controles -> control .)
    RRADIOBUTTON    reduce using rule 7 (controles -> control .)
    RTEXTO          reduce using rule 7 (controles -> control .)
    RAREATEXTO      reduce using rule 7 (controles -> control .)
    RCLAVE          reduce using rule 7 (controles -> control .)
    RCONTENEDOR     reduce using rule 7 (controles -> control .)


state 13

    (8) control -> RETIQUETA . ID PTCOMA

    ID              shift and go to state 26


state 14

    (9) control -> RBOTON . ID PTCOMA

    ID              shift and go to state 27


state 15

    (10) control -> RCHECK . ID PTCOMA

    ID              shift and go to state 28


state 16

    (11) control -> RRADIOBUTTON . ID PTCOMA

    ID              shift and go to state 29


state 17

    (12) control -> RTEXTO . ID PTCOMA

    ID              shift and go to state 30


state 18

    (13) control -> RAREATEXTO . ID PTCOMA

    ID              shift and go to state 31


state 19

    (14) control -> RCLAVE . ID PTCOMA

    ID              shift and go to state 32


state 20

    (15) control -> RCONTENEDOR . ID PTCOMA

    ID              shift and go to state 33


state 21

    (5) instruccion -> LLAA EXCLAMACION GUION GUION RPROPIEDADES propiedades . RPROPIEDADES GUION GUION LLAC
    (16) propiedades -> propiedades . propiedad
    (18) propiedad -> . ID PUNTO ID PARA parametros PARC PTCOMA

    RPROPIEDADES    shift and go to state 34
    ID              shift and go to state 23

    propiedad                      shift and go to state 35

state 22

    (17) propiedades -> propiedad .

    RPROPIEDADES    reduce using rule 17 (propiedades -> propiedad .)
    ID              reduce using rule 17 (propiedades -> propiedad .)


state 23

    (18) propiedad -> ID . PUNTO ID PARA parametros PARC PTCOMA

    PUNTO           shift and go to state 36


state 24

    (4) instruccion -> LLAA EXCLAMACION GUION GUION RCONTROLES controles RCONTROLES . GUION GUION LLAC

    GUION           shift and go to state 37


state 25

    (6) controles -> controles control .

    RCONTROLES      reduce using rule 6 (controles -> controles control .)
    RETIQUETA       reduce using rule 6 (controles -> controles control .)
    RBOTON          reduce using rule 6 (controles -> controles control .)
    RCHECK          reduce using rule 6 (controles -> controles control .)
    RRADIOBUTTON    reduce using rule 6 (controles -> controles control .)
    RTEXTO          reduce using rule 6 (controles -> controles control .)
    RAREATEXTO      reduce using rule 6 (controles -> controles control .)
    RCLAVE          reduce using rule 6 (controles -> controles control .)
    RCONTENEDOR     reduce using rule 6 (controles -> controles control .)


state 26

    (8) control -> RETIQUETA ID . PTCOMA

    PTCOMA          shift and go to state 38


state 27

    (9) control -> RBOTON ID . PTCOMA

    PTCOMA          shift and go to state 39


state 28

    (10) control -> RCHECK ID . PTCOMA

    PTCOMA          shift and go to state 40


state 29

    (11) control -> RRADIOBUTTON ID . PTCOMA

    PTCOMA          shift and go to state 41


state 30

    (12) control -> RTEXTO ID . PTCOMA

    PTCOMA          shift and go to state 42


state 31

    (13) control -> RAREATEXTO ID . PTCOMA

    PTCOMA          shift and go to state 43


state 32

    (14) control -> RCLAVE ID . PTCOMA

    PTCOMA          shift and go to state 44


state 33

    (15) control -> RCONTENEDOR ID . PTCOMA

    PTCOMA          shift and go to state 45


state 34

    (5) instruccion -> LLAA EXCLAMACION GUION GUION RPROPIEDADES propiedades RPROPIEDADES . GUION GUION LLAC

    GUION           shift and go to state 46


state 35

    (16) propiedades -> propiedades propiedad .

    RPROPIEDADES    reduce using rule 16 (propiedades -> propiedades propiedad .)
    ID              reduce using rule 16 (propiedades -> propiedades propiedad .)


state 36

    (18) propiedad -> ID PUNTO . ID PARA parametros PARC PTCOMA

    ID              shift and go to state 47


state 37

    (4) instruccion -> LLAA EXCLAMACION GUION GUION RCONTROLES controles RCONTROLES GUION . GUION LLAC

    GUION           shift and go to state 48


state 38

    (8) control -> RETIQUETA ID PTCOMA .

    RCONTROLES      reduce using rule 8 (control -> RETIQUETA ID PTCOMA .)
    RETIQUETA       reduce using rule 8 (control -> RETIQUETA ID PTCOMA .)
    RBOTON          reduce using rule 8 (control -> RETIQUETA ID PTCOMA .)
    RCHECK          reduce using rule 8 (control -> RETIQUETA ID PTCOMA .)
    RRADIOBUTTON    reduce using rule 8 (control -> RETIQUETA ID PTCOMA .)
    RTEXTO          reduce using rule 8 (control -> RETIQUETA ID PTCOMA .)
    RAREATEXTO      reduce using rule 8 (control -> RETIQUETA ID PTCOMA .)
    RCLAVE          reduce using rule 8 (control -> RETIQUETA ID PTCOMA .)
    RCONTENEDOR     reduce using rule 8 (control -> RETIQUETA ID PTCOMA .)


state 39

    (9) control -> RBOTON ID PTCOMA .

    RCONTROLES      reduce using rule 9 (control -> RBOTON ID PTCOMA .)
    RETIQUETA       reduce using rule 9 (control -> RBOTON ID PTCOMA .)
    RBOTON          reduce using rule 9 (control -> RBOTON ID PTCOMA .)
    RCHECK          reduce using rule 9 (control -> RBOTON ID PTCOMA .)
    RRADIOBUTTON    reduce using rule 9 (control -> RBOTON ID PTCOMA .)
    RTEXTO          reduce using rule 9 (control -> RBOTON ID PTCOMA .)
    RAREATEXTO      reduce using rule 9 (control -> RBOTON ID PTCOMA .)
    RCLAVE          reduce using rule 9 (control -> RBOTON ID PTCOMA .)
    RCONTENEDOR     reduce using rule 9 (control -> RBOTON ID PTCOMA .)


state 40

    (10) control -> RCHECK ID PTCOMA .

    RCONTROLES      reduce using rule 10 (control -> RCHECK ID PTCOMA .)
    RETIQUETA       reduce using rule 10 (control -> RCHECK ID PTCOMA .)
    RBOTON          reduce using rule 10 (control -> RCHECK ID PTCOMA .)
    RCHECK          reduce using rule 10 (control -> RCHECK ID PTCOMA .)
    RRADIOBUTTON    reduce using rule 10 (control -> RCHECK ID PTCOMA .)
    RTEXTO          reduce using rule 10 (control -> RCHECK ID PTCOMA .)
    RAREATEXTO      reduce using rule 10 (control -> RCHECK ID PTCOMA .)
    RCLAVE          reduce using rule 10 (control -> RCHECK ID PTCOMA .)
    RCONTENEDOR     reduce using rule 10 (control -> RCHECK ID PTCOMA .)


state 41

    (11) control -> RRADIOBUTTON ID PTCOMA .

    RCONTROLES      reduce using rule 11 (control -> RRADIOBUTTON ID PTCOMA .)
    RETIQUETA       reduce using rule 11 (control -> RRADIOBUTTON ID PTCOMA .)
    RBOTON          reduce using rule 11 (control -> RRADIOBUTTON ID PTCOMA .)
    RCHECK          reduce using rule 11 (control -> RRADIOBUTTON ID PTCOMA .)
    RRADIOBUTTON    reduce using rule 11 (control -> RRADIOBUTTON ID PTCOMA .)
    RTEXTO          reduce using rule 11 (control -> RRADIOBUTTON ID PTCOMA .)
    RAREATEXTO      reduce using rule 11 (control -> RRADIOBUTTON ID PTCOMA .)
    RCLAVE          reduce using rule 11 (control -> RRADIOBUTTON ID PTCOMA .)
    RCONTENEDOR     reduce using rule 11 (control -> RRADIOBUTTON ID PTCOMA .)


state 42

    (12) control -> RTEXTO ID PTCOMA .

    RCONTROLES      reduce using rule 12 (control -> RTEXTO ID PTCOMA .)
    RETIQUETA       reduce using rule 12 (control -> RTEXTO ID PTCOMA .)
    RBOTON          reduce using rule 12 (control -> RTEXTO ID PTCOMA .)
    RCHECK          reduce using rule 12 (control -> RTEXTO ID PTCOMA .)
    RRADIOBUTTON    reduce using rule 12 (control -> RTEXTO ID PTCOMA .)
    RTEXTO          reduce using rule 12 (control -> RTEXTO ID PTCOMA .)
    RAREATEXTO      reduce using rule 12 (control -> RTEXTO ID PTCOMA .)
    RCLAVE          reduce using rule 12 (control -> RTEXTO ID PTCOMA .)
    RCONTENEDOR     reduce using rule 12 (control -> RTEXTO ID PTCOMA .)


state 43

    (13) control -> RAREATEXTO ID PTCOMA .

    RCONTROLES      reduce using rule 13 (control -> RAREATEXTO ID PTCOMA .)
    RETIQUETA       reduce using rule 13 (control -> RAREATEXTO ID PTCOMA .)
    RBOTON          reduce using rule 13 (control -> RAREATEXTO ID PTCOMA .)
    RCHECK          reduce using rule 13 (control -> RAREATEXTO ID PTCOMA .)
    RRADIOBUTTON    reduce using rule 13 (control -> RAREATEXTO ID PTCOMA .)
    RTEXTO          reduce using rule 13 (control -> RAREATEXTO ID PTCOMA .)
    RAREATEXTO      reduce using rule 13 (control -> RAREATEXTO ID PTCOMA .)
    RCLAVE          reduce using rule 13 (control -> RAREATEXTO ID PTCOMA .)
    RCONTENEDOR     reduce using rule 13 (control -> RAREATEXTO ID PTCOMA .)


state 44

    (14) control -> RCLAVE ID PTCOMA .

    RCONTROLES      reduce using rule 14 (control -> RCLAVE ID PTCOMA .)
    RETIQUETA       reduce using rule 14 (control -> RCLAVE ID PTCOMA .)
    RBOTON          reduce using rule 14 (control -> RCLAVE ID PTCOMA .)
    RCHECK          reduce using rule 14 (control -> RCLAVE ID PTCOMA .)
    RRADIOBUTTON    reduce using rule 14 (control -> RCLAVE ID PTCOMA .)
    RTEXTO          reduce using rule 14 (control -> RCLAVE ID PTCOMA .)
    RAREATEXTO      reduce using rule 14 (control -> RCLAVE ID PTCOMA .)
    RCLAVE          reduce using rule 14 (control -> RCLAVE ID PTCOMA .)
    RCONTENEDOR     reduce using rule 14 (control -> RCLAVE ID PTCOMA .)


state 45

    (15) control -> RCONTENEDOR ID PTCOMA .

    RCONTROLES      reduce using rule 15 (control -> RCONTENEDOR ID PTCOMA .)
    RETIQUETA       reduce using rule 15 (control -> RCONTENEDOR ID PTCOMA .)
    RBOTON          reduce using rule 15 (control -> RCONTENEDOR ID PTCOMA .)
    RCHECK          reduce using rule 15 (control -> RCONTENEDOR ID PTCOMA .)
    RRADIOBUTTON    reduce using rule 15 (control -> RCONTENEDOR ID PTCOMA .)
    RTEXTO          reduce using rule 15 (control -> RCONTENEDOR ID PTCOMA .)
    RAREATEXTO      reduce using rule 15 (control -> RCONTENEDOR ID PTCOMA .)
    RCLAVE          reduce using rule 15 (control -> RCONTENEDOR ID PTCOMA .)
    RCONTENEDOR     reduce using rule 15 (control -> RCONTENEDOR ID PTCOMA .)


state 46

    (5) instruccion -> LLAA EXCLAMACION GUION GUION RPROPIEDADES propiedades RPROPIEDADES GUION . GUION LLAC

    GUION           shift and go to state 49


state 47

    (18) propiedad -> ID PUNTO ID . PARA parametros PARC PTCOMA

    PARA            shift and go to state 50


state 48

    (4) instruccion -> LLAA EXCLAMACION GUION GUION RCONTROLES controles RCONTROLES GUION GUION . LLAC

    LLAC            shift and go to state 51


state 49

    (5) instruccion -> LLAA EXCLAMACION GUION GUION RPROPIEDADES propiedades RPROPIEDADES GUION GUION . LLAC

    LLAC            shift and go to state 52


state 50

    (18) propiedad -> ID PUNTO ID PARA . parametros PARC PTCOMA
    (19) parametros -> . parametros COMA parametro
    (20) parametros -> . parametro
    (21) parametro -> . expresion
    (22) expresion -> . ENTERO
    (23) expresion -> . DECIMAL
    (24) expresion -> . CADENA
    (25) expresion -> . ID

    ENTERO          shift and go to state 57
    DECIMAL         shift and go to state 58
    CADENA          shift and go to state 59
    ID              shift and go to state 53

    parametros                     shift and go to state 54
    parametro                      shift and go to state 55
    expresion                      shift and go to state 56

state 51

    (4) instruccion -> LLAA EXCLAMACION GUION GUION RCONTROLES controles RCONTROLES GUION GUION LLAC .

    LLAA            reduce using rule 4 (instruccion -> LLAA EXCLAMACION GUION GUION RCONTROLES controles RCONTROLES GUION GUION LLAC .)
    $end            reduce using rule 4 (instruccion -> LLAA EXCLAMACION GUION GUION RCONTROLES controles RCONTROLES GUION GUION LLAC .)


state 52

    (5) instruccion -> LLAA EXCLAMACION GUION GUION RPROPIEDADES propiedades RPROPIEDADES GUION GUION LLAC .

    LLAA            reduce using rule 5 (instruccion -> LLAA EXCLAMACION GUION GUION RPROPIEDADES propiedades RPROPIEDADES GUION GUION LLAC .)
    $end            reduce using rule 5 (instruccion -> LLAA EXCLAMACION GUION GUION RPROPIEDADES propiedades RPROPIEDADES GUION GUION LLAC .)


state 53

    (25) expresion -> ID .

    PARC            reduce using rule 25 (expresion -> ID .)
    COMA            reduce using rule 25 (expresion -> ID .)


state 54

    (18) propiedad -> ID PUNTO ID PARA parametros . PARC PTCOMA
    (19) parametros -> parametros . COMA parametro

    PARC            shift and go to state 60
    COMA            shift and go to state 61


state 55

    (20) parametros -> parametro .

    PARC            reduce using rule 20 (parametros -> parametro .)
    COMA            reduce using rule 20 (parametros -> parametro .)


state 56

    (21) parametro -> expresion .

    PARC            reduce using rule 21 (parametro -> expresion .)
    COMA            reduce using rule 21 (parametro -> expresion .)


state 57

    (22) expresion -> ENTERO .

    PARC            reduce using rule 22 (expresion -> ENTERO .)
    COMA            reduce using rule 22 (expresion -> ENTERO .)


state 58

    (23) expresion -> DECIMAL .

    PARC            reduce using rule 23 (expresion -> DECIMAL .)
    COMA            reduce using rule 23 (expresion -> DECIMAL .)


state 59

    (24) expresion -> CADENA .

    PARC            reduce using rule 24 (expresion -> CADENA .)
    COMA            reduce using rule 24 (expresion -> CADENA .)


state 60

    (18) propiedad -> ID PUNTO ID PARA parametros PARC . PTCOMA

    PTCOMA          shift and go to state 62


state 61

    (19) parametros -> parametros COMA . parametro
    (21) parametro -> . expresion
    (22) expresion -> . ENTERO
    (23) expresion -> . DECIMAL
    (24) expresion -> . CADENA
    (25) expresion -> . ID

    ENTERO          shift and go to state 57
    DECIMAL         shift and go to state 58
    CADENA          shift and go to state 59
    ID              shift and go to state 53

    parametro                      shift and go to state 63
    expresion                      shift and go to state 56

state 62

    (18) propiedad -> ID PUNTO ID PARA parametros PARC PTCOMA .

    RPROPIEDADES    reduce using rule 18 (propiedad -> ID PUNTO ID PARA parametros PARC PTCOMA .)
    ID              reduce using rule 18 (propiedad -> ID PUNTO ID PARA parametros PARC PTCOMA .)


state 63

    (19) parametros -> parametros COMA parametro .

    PARC            reduce using rule 19 (parametros -> parametros COMA parametro .)
    COMA            reduce using rule 19 (parametros -> parametros COMA parametro .)

